--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "basketball-junkie-react",
   "version": "0.1.0",
-  "homepage": "https://whoopty3.github.io/basketball-junkie-react",
-  "private": true,
+  "homepage": "/basketball-junkie-react",
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
