--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "^5.0.1",
     "router-dom": "^3.0.1",
     "web-vitals": "^2.1.4",
+    "sanitize-filename": "^1.6.3",
     "proxy": "https://basketball-junkie-backend.onrender.com"
 
   },
